# seinet

./: Cargo.toml
examples/: sawtooth.rs
src/: activation_functions.rs  dqn.rs  fitting.rs  fitting_utils.rs  float_utils.rs  loss_functions.rs  main.rs  neuron.rs  online_example.rs  vectors.rs
src/driving/: input.rs
