[package]
name = "seinet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
crossterm = "0.27.0"
plotly = "0.8.4"
rand = "0.8.5"
ringbuffer = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
